Fix: Corrigindo bugs z-index

--- a/src/Components/Header/style.module.scss
+++ b/src/Components/Header/style.module.scss
@@ -21,7 +21,7 @@
     color: variables.$primary-color;
 
     animation: bounce-in-top 2s both;
-    z-index: 3;
+    z-index: 4;
   }
 
   img {
